--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "version": "0.1.0",
   "license": "0BSD",
   "scripts": {
-    "build": "gatsby build && zip -FSr -X build.zip ./public/",
+    "build": "gatsby clean && gatsby build",
+    "deploy": "aws s3 sync ./public/ s3://www.synepho.com --delete",
+    "build-and-deploy": "npm run build && npm run deploy",
+    "package": "zip -FSr -X build.zip ./public/",
+    "deploy-manual": "aws s3 sync ./public/ s3://www.synepho.com --delete",
+    "build-and-deploy-manual": "npm run build && npm run deploy-manual",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "gatsby develop",
@@ -14,33 +19,33 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "@headlessui/react": "^1.4.3",
-    "axios": "^0.25.0",
-    "daisyui": "^1.25.4",
-    "gatsby": "^4.4.0",
-    "gatsby-plugin-google-gtag": "^4.7.0",
-    "gatsby-plugin-image": "^2.6.0",
-    "gatsby-plugin-react-helmet": "^5.7.0",
-    "gatsby-plugin-robots-txt": "^1.7.0",
-    "gatsby-plugin-s3": "^0.3.8",
-    "gatsby-plugin-sharp": "^4.6.0",
-    "gatsby-plugin-sitemap": "^5.8.0",
-    "gatsby-source-filesystem": "^4.6.0",
-    "gatsby-transformer-json": "^4.6.0",
-    "gatsby-transformer-remark": "^5.5.2",
-    "gatsby-transformer-sharp": "^4.6.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "@headlessui/react": "^2.2.0",
+    "axios": "^1.7.9",
+    "daisyui": "^4.12.20",
+    "gatsby": "^5.14.0",
+    "gatsby-plugin-google-gtag": "^5.14.0",
+    "gatsby-plugin-image": "^3.14.0",
+    "gatsby-plugin-react-helmet": "^6.14.0",
+    "gatsby-plugin-robots-txt": "^1.8.0",
+    "gatsby-plugin-sharp": "^5.14.0",
+    "gatsby-plugin-sitemap": "^6.14.0",
+    "gatsby-source-filesystem": "^5.14.0",
+    "gatsby-transformer-json": "^5.14.0",
+    "gatsby-transformer-remark": "^6.14.0",
+    "gatsby-transformer-sharp": "^5.14.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.0",
-    "autoprefixer": "^10.4.2",
-    "gatsby-plugin-postcss": "^5.5.0",
-    "postcss": "^8.4.5",
-    "prettier": "^2.5.1",
-    "tailwindcss": "^3.0.15"
+    "@tailwindcss/typography": "^0.5.15",
+    "autoprefixer": "^10.4.20",
+    "dotenv": "^16.3.1",
+    "gatsby-plugin-postcss": "^6.14.0",
+    "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
+    "tailwindcss": "^3.4.16"
   },
   "repository": {
     "type": "git",
